overflow x hidden deleted from html and added to components individually, testing to see if it fixes mobile issue

--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 	scroll-behavior: smooth;
-	overflow-x: hidden;
+	
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
